Stop-gap frontend fixes
Allow FE to show 12 beers at a time, with guest beers and tier
information

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -25,48 +25,24 @@ Body {
 }
 
 .guest-beers {
-  width: 838px;
-  height: 90px;
-  float: right;
-}
-
-.guest-beers-total {
-  width: 300px;
-  float: right;
-  margin-bottom: 5px;
-  margin-right: 30px;
-}
-
-.guest-beer-name{
   font-family: RobotoSlab;
-  font-size: 18px;
+  font-size: 28px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 1.6px;
-  color: #233746;
-  float: left;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1740px;
 }
 
-.guest-beer-price {
-  font-family: RobotoSlab;
-  font-size: 18px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 2.7px;
-  text-align: center;
-  color: #233746;
-  float: right;
+.guest-beers table {
+  background-color: white;
+  padding-left: 36px;
+  padding-bottom: 10px;
+  width: 100%;
 }
 
 .Guest-Beer {
-  width: 281px;
-  height: 90px;
+  width: 20%;
   object-fit: contain;
-  float: left;
 }
 
 .Line {
@@ -187,17 +163,16 @@ Body {
 }
 
 .tier-pricing {
-  margin-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1740px;
 }
 
 .tier {
+  margin-left: 36px;
   margin-top: 10px;
-  width: 868px;
+  width: 832px;
   float: left;
-}
-
-.tier:last-child {
-  margin-left: 35px;
 }
 
 .tier-main-name {
